[tool.poetry]
name = "okfuzz"
version = "0.1.0"
description = ""
authors = ["arnos-stuff <bcda0276@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.27.3"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.scripts]
okfuzz = "okfuzz.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
